# dealguard-app

./: .env.example  .env.local.example  .eslintrc.json  .gitignore  API_README.md  INTEGRATION_COMPLETE.md  INTEGRATION_GUIDE.md  PAYMENT_SETUP_GUIDE.md  README.md  README_DEALGUARD.md  SETUP.md  api-test-corrected.js  api-test-extended.js  api-test.js  api-test.ts  final-test.ps1  next.config.js  package-lock.json  package.json  render.yaml  simple-test.ps1  smoke-integration.ps1  tailwind.config.ts  test-endpoints.sh  test-fixed-endpoints.ps1  tsconfig.json  verify-fixes.ps1
.github/: copilot-instructions-clean.md  copilot-instructions.md
.github/workflows/: soroban-build.yml
backend/: .env.example  .eslintrc.json  .gitignore  README.md  package-lock.json  package.json  smoke-backend.ps1  smoke-stellar.ps1  tsconfig.json
backend/prisma/: dev.db  schema.prisma
backend/src/: server.ts
prisma/: schema.prisma
soroban/: Cargo.toml
soroban/.cargo/: config.toml
soroban/contracts/dealguard-escrow/: Cargo.toml
soroban/contracts/dealguard-escrow/src/: lib.rs  test.rs
soroban/contracts/dealguard-escrow/test_snapshots/test/: initializes_and_tracks_state.1.json
soroban/scripts/: doctor.ps1
src/app/: globals.css  layout.tsx  page.tsx
src/components/: balance-card.tsx  bottom-nav.tsx  escrow-release-panel.tsx  navbar.tsx  payment-form.tsx  payment-method-selector.tsx  providers.tsx  quick-actions.tsx  transaction-item.tsx
src/lib/: api-client.ts  backend-url.ts  index.ts  payment-client.ts  plans.ts  socket-client.ts
src/store/: payment-store.ts
(+67 files in other folders)
