[workspace]
members = ["contracts/*"]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.1.0"
license = "Proprietary"

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release.package.dealguard-escrow-contract]
wasm-opt = false